syntax = "proto3";

package com.lekkss.weathersensor;

option java_multiple_files = true;
option java_package = "com.lekkss.weathersensor.weathersensorservice";
option java_outer_classname = "WeatherSensorServiceProto";

service WeatherSensorService {
    rpc GetWeatherForecast(LocationCoordinates) returns (WeatherData);
    rpc GetAverageWeatherForcast(stream LocationCoordinates) returns (WeatherData);
}

message LocationCoordinates {
    double latitude = 1;
    double longitude = 2;
}

message WeatherData {
    double temperature = 1;
    double humidity = 2;
    double wind_speed = 3;
    double precipitation = 4;
}